tests/ui-stable/try_transmute-dst-not-tryfrombytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::TryFromBytes` is not satisfied
   --> tests/ui-stable/try_transmute-dst-not-tryfrombytes.rs:17:33
    |
 17 |     let dst_not_try_from_bytes: Result<NotZerocopy, _> = try_transmute!(AU16(0));
    |                                 ^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `zerocopy::TryFromBytes` is not implemented for `NotZerocopy`
   --> tests/ui-stable/../../zerocopy-derive/tests/include.rs:48:5
    |
 48 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `zerocopy::TryFromBytes`:
              ()
              *const T
              *mut T
              AU16
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
            and 126 others
note: required by a bound in `ValidityError`
   --> /app/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`

error[E0277]: the trait bound `NotZerocopy: zerocopy::TryFromBytes` is not satisfied
   --> tests/ui-stable/try_transmute-dst-not-tryfrombytes.rs:17:58
    |
 17 |     let dst_not_try_from_bytes: Result<NotZerocopy, _> = try_transmute!(AU16(0));
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `zerocopy::TryFromBytes` is not implemented for `NotZerocopy`
   --> tests/ui-stable/../../zerocopy-derive/tests/include.rs:48:5
    |
 48 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `zerocopy::TryFromBytes`:
              ()
              *const T
              *mut T
              AU16
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
            and 126 others
note: required by a bound in `try_transmute`
   --> /app/src/util/macro_util.rs:613:10
    |
610 | pub fn try_transmute<Src, Dst>(src: Src) -> Result<Dst, ValidityError<Src, Dst>>
    |        ------------- required by a bound in this function
...
613 |     Dst: TryFromBytes,
    |          ^^^^^^^^^^^^ required by this bound in `try_transmute`
    = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::TryFromBytes` is not satisfied
   --> tests/ui-stable/try_transmute-dst-not-tryfrombytes.rs:17:58
    |
 17 |     let dst_not_try_from_bytes: Result<NotZerocopy, _> = try_transmute!(AU16(0));
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `zerocopy::TryFromBytes` is not implemented for `NotZerocopy`
   --> tests/ui-stable/../../zerocopy-derive/tests/include.rs:48:5
    |
 48 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `zerocopy::TryFromBytes`:
              ()
              *const T
              *mut T
              AU16
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
            and 126 others
note: required by a bound in `ValidityError`
   --> /app/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
